		methods.
	Renamed various grid methods.  The logic was to distinguish between neighbors
		(actual objects or values) and locations.  All previous methods have been
		deprecated.

		IN GRID2D and GRID3D AND SUBCLASSES:
		getNeighborsMaxDistance(...locations...)   ->   getMooreLocations
		getNeighborsHamiltonianDistance(...locations...)   -> getVonNeumannLocations
		getNeighborsHexagonalDistance(...locations...)   -> getHexagonalLocations
		getNeighborsMaxDistance(...objects...)   ->   getMooreNeighbors
		getNeighborsHamiltonianDistance(...objects...)   -> getVonNeumannNeighbors
		getNeighborsHexagonalDistance(...objects...)   ->   getHexagonalNeighbors
		getNeighborsAndCorrespondingPositionsMaxDistance(...)   -> getMooreNeighborsAndLocations
		getNeighborsAndCorrespondingPositionsHamitonianDistance(...)  -> getVonNeumannNeighborsAndLocations
		getNeighborsAndCorrespondingPositionsHexagonalDistance(...)   -> getHexagonalNeighborsAndLocations

		IN CONTINUOUS2D and CONTINUOUS3D:
		getObjectsExactlyWithinDistance(...)    ->	getNeighborsExactlyWithinDistance
		getObjectsWithinDistance(...)           ->	getNeighborsWithinDistance
	Added boundedness checks for 3D grid neighborhood lookup, oops	
	Bug fix to SparseGrid[2|3]D and Continuous[2|3]D, which were calling
		getObjectsAtLocation() without checking to see if its return
		value was null.  Thanks to Javier <kuu.kuu@gmail.com>
	Added getRadialNeighbors, getRadialLocations, and getRadialNeighborsAndLocations
		to the various grid classes.
	Modified SimpleEdgePortrayal so that the basewidth is 1.0 and also to add
		different kinds of line ends.
	Added sim.util.distribution to classdocs.  Thanks to Stephen Davies <stephen@umw.edu>
	Added SimpleController.getSimulation() and Console.getSimulation().  Not a big fan
		of this, but it's necessary for some flexibility.
	Removed vestigial nonsense from ValuePortayal2D
	Updated MersenneTwisterFast to version 21